[package]
name = "dyriscvic"
version = "0.1.0"
edition = "2018"

[profile.release]
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
