[package]
name = "dyriscvic"
version = "0.1.0"
description = "A RISC-V assembler, disassembler, interpreter and JIT compiler in Rust."
repository = "https://github.com/Stovent/dyriscvic"
keywords = ["riscv", "risc-v", "emulator", "interpreter", "jit"]
categories = ["compilers", "emulators"]
edition = "2018"

[profile.dev]
overflow-checks = false

[profile.release]
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
